<resources>
    <string name="app_name">TennisData</string>
    <string name="title_name">\t\t\t\t\t\t\tWelcome to Tennis Tracker \n\n\nSteps to use:\n1. Sign in to a Google account\n2. Enter player names\n3. Start tracking points\n4. Select serve/return positions\n5. Tap the zones where the ball lands</string>
    <string name="sign_in">Sign In</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="serve_one">Player 1 Serve</string>
    <string name="serve_two">Player 2 Serve</string>
    <string name="out">Out</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="title_activity_data_view">DataView</string>


</resources>
